--- a/app.json
+++ b/app.json
@@ -1,6 +1,7 @@
 {
   "pages": [
-    "pages/index/index"
+    "pages/index/index",
+    "pages/move/index"
   ],
   "window": {
     "backgroundTextStyle": "dark",
